Fix loading visibility of colorize masks

We shouldn't use KisLayerPropertiesIcons::setNodePropertyAutoUndo()
unless we are ready the action to happen asynchronously in a stroke.

In the loading code we should just assign the properties directly,
without doing any updates or undo actions.

BUG:425830